[gd_scene load_steps=6 format=3 uid="uid://c4jbppdon1e4o"]

[ext_resource type="Script" uid="uid://cd0r6h7jeknup" path="res://scripts/trash/trash_scene.gd" id="1_23cp8"]
[ext_resource type="PackedScene" uid="uid://x3a8ykssvsxo" path="res://scenes/components/interact_box.tscn" id="2_qyxun"]
[ext_resource type="PackedScene" uid="uid://dedlrs3cw2r5k" path="res://scenes/components/trash_box.tscn" id="3_4e25j"]
[ext_resource type="ArrayMesh" uid="uid://bfxwfbvyk0vm8" path="res://assets/trash_meshes/cardboard_l.tres" id="4_23cp8"]

[sub_resource type="BoxShape3D" id="BoxShape3D_qyxun"]
size = Vector3(2.89258, 2.30685, 2.12207)

[node name="cardboardLarge" type="Node3D"]
script = ExtResource("1_23cp8")

[node name="interactBox" parent="." node_paths=PackedStringArray("interactCol") instance=ExtResource("2_qyxun")]
interactCol = NodePath("interactCol")

[node name="interactCol" type="CollisionShape3D" parent="interactBox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.982526, 0)
shape = SubResource("BoxShape3D_qyxun")

[node name="trashBox" parent="." node_paths=PackedStringArray("trashCol") instance=ExtResource("3_4e25j")]
visible = true
paper = true
trashCol = NodePath("trashCol")

[node name="trashCol" type="CollisionShape3D" parent="trashBox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.982526, 0)
shape = SubResource("BoxShape3D_qyxun")

[node name="trashMesh" type="MeshInstance3D" parent="."]
mesh = ExtResource("4_23cp8")
